--- a/DOCTYPE.css
+++ b/DOCTYPE.css
@@ -5,27 +5,29 @@ body {
       }
   img{
     position: fixed;
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-          z-index: -1;
-          max-width: 100%;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    max-width: 100%;
 
   }
 
-      .center-box {
+    .center-box {
     position: absolute;
     top: 50%;
     left :50%;
     transform: translate(-50%, -50%);
     
-          background-color: rgb(13, 12, 19);
-          height: 850px;
-          width: 500px;
-          border-radius: 10px;
-          text-align: center;
-          padding-top: 70px;
+    background-color: rgb(13, 12, 19);
+    height: 100%;
+    width: 100%;
+    max-height: 80vh;
+    max-width: 30vw;
+    border-radius: 10px;
+    text-align: center;
+    padding-top: 70px;
     color : white;
     border: 2px solid white;
     box-sizing: border-box;
@@ -34,13 +36,13 @@ body {
       }
   
     h1{
-       font-size:  5vw;
+       font-size:  3vw;
        margin-top: 20px;  
        
  
     }
 
-    ul {
+ul {
 display: flex;
 flex-direction: column;
 justify-content: center;
@@ -54,7 +56,7 @@ display: block;
 text-align: center;
 width: 200px; 
 height: 50px;
-margin: 30px 0; 
+margin: 25px 0; 
 
 position: relative;
 right: 30px;
