成功了啦嘰

--- a/DOCTYPE.css
+++ b/DOCTYPE.css
@@ -27,7 +27,7 @@ body {
     max-width: 30vw;
     border-radius: 10px;
     text-align: center;
-    padding-top: 70px;
+    padding-top: 7vh;
     color : white;
     border: 2px solid white;
     box-sizing: border-box;
@@ -36,8 +36,8 @@ body {
       }
   
     h1{
-       font-size:  3vw;
-       margin-top: 20px;  
+       font-size:  3.5vw;
+       margin-top: 0vh;  
        
  
     }
@@ -54,13 +54,13 @@ height: 100%;
 li {
 display: block;
 text-align: center;
-width: 200px; 
-height: 50px;
-margin: 25px 0; 
+width: 40vw; 
+height: 10vh;
+margin: 1vh 0; 
 
 position: relative;
-right: 30px;
-top: -150px;
+right: 1vw;
+top: -10vh;
 
 }
 
@@ -69,9 +69,9 @@ button{
     border: .5px solid rgb(230, 216, 219);
     border-radius: 20px;
     color: #fff;
-    padding: 20px;
+    padding: 2vh 1vw;
     cursor: pointer;
-    font-size: 30px;
+    font-size: 2vw;
     box-shadow: 0 0 10px 0 rgb(161, 159, 159),
                 0 0 10px 0 rgb(217, 192, 197),
                 0 0 10px 0 rgb(230, 202, 208) inset; 
