--- a/story.css
+++ b/story.css
@@ -33,34 +33,34 @@ body {
       }
   
     h1{
-       font-size:  80px;
-       margin-top: 20px;
+      font-size: 4em;
+      margin-top: 1em;
        position: absolute;
-       top: 25px;
-       left: 30px;        
+       top: 2.5%;
+        left: 3%;        
     }
 
     p{
-      font-size: 30px;
-      margin-top: 20px;
+      font-size: 1.5em;
+  margin-top: 1em;
       text-align: center;
       position: absolute;
-      top: 200px;
+      top: 20%;
     }
 
     button{
       background-color: #000;
       border: .5px solid rgb(230, 216, 219);
-      border-radius: 20px;
+      border-radius: 2em;
       color: #fff;
-      padding: 20px;
+      padding:  1em;
       cursor: pointer;
-      font-size: 30px;
+      font-size: 1.5em;
       box-shadow: 0 0 10px 0 rgb(161, 159, 159),
                   0 0 10px 0 rgb(217, 192, 197),
                   0 0 10px 0 rgb(230, 202, 208) inset;
       position: absolute;
-      top: 740px;
-      right: 10px;
+      top: 85%;
+      right: 1%;
                   
     }
