--- a/主角.css
+++ b/主角.css
@@ -19,11 +19,11 @@ body {
     transform: translate(-50%, -50%);
 
           background-color: rgb(13, 12, 19);
-          height:770px;
-          width: 480px;
+          height: 70vh;
+          width: 28vw;
           border-radius: 10px;
           text-align: center;
-          padding-top: 70px;
+          padding-top: 5vh;
     color : white;
     border: 2px solid white;
     box-sizing: border-box;
@@ -36,11 +36,11 @@ body {
     transform: translate(-50%, -50%);
 
           background-color: rgb(13, 12, 19);
-          height: 400px;
-          width: 970px;
+          height: 35vh;
+          width: 60vw;
           border-radius: 10px;
           text-align: center;
-          padding-top: 70px;
+          padding-top: 5vh;
     color : white;
     border: 2px solid white;
     box-sizing: border-box;
@@ -52,11 +52,11 @@ body {
     left :65%;
     transform: translate(-50%, -50%);
           background-color: rgb(13, 12, 19);
-          height: 400px;
-          width: 970px;
+          height: 35vh;
+          width: 60vw;
           border-radius: 10px;
           text-align: center;
-          padding-top: 70px;
+          padding-top: 5vh;
     color : white;
     border: 2px solid white;
     box-sizing: border-box;
@@ -64,72 +64,73 @@ body {
   }
 
     h1{
-       font-size:  80px;
-       margin-top: 20px;
+       font-size: 3vw;
+       margin-top: 2vh;
        position: absolute;
-       top: 25px;
-       left: 30px;        
+       top: 2vh;
+      left: 3vw;       
     }
     h2{
-      font-size:  50px;
-       margin-top: 20px;
+       font-size: 2.5vw;
+       margin-top: 0.5vh;
        position: absolute;
-       top: -10px;
-       left: 30px;
+       top: -1vh;
+       left: 1vw;
     }
     h3{
-      font-size:  50px;
-       margin-top: 20px;
+      font-size: 2.5vw;
+      margin-top: 0.5vh;
        position: absolute;
-       top: -10px;
-       left: 500px;
+       top: -1vh;
+       left: 30vw;
     }
   .image1 {
-  max-width: 70%;
+  max-width: 50%;
   height: auto;   
   
   position: absolute;
-  top: 160px;
-  left: 100px;
+  top: 15vh;
+  left: 8vw;
   }
   .image2 {
-    max-width: 3%;
+    max-width: 2%;
     height: auto;   
     
     position: absolute;
-    top: 100px;
-    left: 60px;
+    top: 15vh;
+    left: 3vw;
     }
   .image3 {
-      max-width: 18%;
+      max-width: 10%;
       height: auto;   
       
       position: absolute;
-      top: 100px;
-      left: 470px;
+      top: 15vh;
+      left: 29vw;
     }
   .image4 {
-    max-width: 17%;
+    max-width: 9%;
     height: auto;   
     
     position: absolute;
-    top: 120px;
-    left: -10px;
+    top: 15vh;
+    left: 1vw;
     }
   .image5 {
-    max-width: 15%;
+    max-width: 8%;
     height: auto;   
     
     position: absolute;
-    top: 100px;
-    left: 470px;
+    top: 15vh;
+    left: 30vw;
   }
     p{
-      font-size: 30px;
-      margin-top: 20px;
+      font-size: 1.5vw;
+      margin-top: 2vh;
       text-align: center;
       position: absolute;
-      top: 500px;
+      top: 38vh;
+      left:4vw
     }
     
 
@@ -138,14 +139,14 @@ body {
       border: .5px solid rgb(230, 216, 219);
       border-radius: 20px;
       color: #fff;
-      padding: 20px;
+      padding: 1vw;
       cursor: pointer;
-      font-size: 30px;
+      font-size: 1vw;
       box-shadow: 0 0 10px 0 rgb(161, 159, 159),
                   0 0 10px 0 rgb(217, 192, 197),
                   0 0 10px 0 rgb(230, 202, 208) inset;
       position: absolute;
-      top: 300px;
-      right: 10px;
+      top: 27vh;
+      right: 1vw;
                   
     }
