--- a/團隊介紹.css
+++ b/團隊介紹.css
@@ -11,30 +11,33 @@ img{
         z-index: -1;
 }
 
-      .center-box {
-    position: absolute;
-    top: 50%;
-    left :50%;
-    transform: translate(-50%, -50%);
-
-          background-color: rgb(13, 12, 19);
-          height: 850px;
-          width: 500px;
-          border-radius: 10px;
-          text-align: center;
-          padding-top: 70px;
-    color : white;
-    border: 2px solid white;
-    box-sizing: border-box;
-    
-      }
+.center-box {
+  position: absolute;
+  top: 50%;
+  left :50%;
+  transform: translate(-50%, -50%);
+  
+  background-color: rgb(13, 12, 19);
+  height: 100%;
+  width: 100%;
+  max-height: 80vh;
+  max-width: 30vw;
+  border-radius: 10px;
+  text-align: center;
+  padding-top: 7vh;
+  color : white;
+  border: 2px solid white;
+  box-sizing: border-box;
+  opacity: 0.8;
+  
+    }
   
     h1{
-       font-size:  80px;
-       margin-top: 20px;
-       position: absolute;
-       top: 25px;
-       left: 30px;        
+      font-size: 8vw;
+      margin-top: 2vh;
+      position: absolute;
+      top: 2.5vh;
+      left: 6vw;      
     }
   /* 這裡開始是圖片 */
   .image1 {
@@ -48,63 +51,109 @@ img{
 
 
 
-    /* p{
-      font-size: 30px;
-      margin-top: 20px;
-      text-align: center;
-      position: absolute;
-      top: 500px;
-    } */
 
     .button1{
       background-color: #000;
-      border: .5px solid rgb(230, 216, 219);
-      border-radius: 20px;
+      border: 0.4vw solid rgb(230, 216, 219);
+      border-radius: 2vw;
       color: #fff;
-      padding: 20px;
+      padding: 1vw;
       cursor: pointer;
-      font-size: 30px;
+      font-size: 1vw;
       box-shadow: 0 0 10px 0 rgb(161, 159, 159),
                   0 0 10px 0 rgb(217, 192, 197),
                   0 0 10px 0 rgb(230, 202, 208) inset;
       position: absolute;
-      top: 740px;
-      right: 10px;          
+      top: 70vh;
+      right: 1vw;       
     }
     .button2{
       background-color: #8a0000;
-      border: .5px solid rgb(230, 216, 219);
-      border-radius: 20px;
+      border: 0.3vw solid rgb(230, 216, 219);
+      border-radius: 2vw;
       color: #fff;
-      padding: 15px;
+      padding: 1vw;
       cursor: pointer;
-      font-size: 15px;
-      box-shadow: 0 0 10px 0 rgb(161, 159, 159),
-                  0 0 10px 0 rgb(217, 192, 197),
-                  0 0 10px 0 rgb(230, 202, 208) inset;
+      font-size: 1vw;
+      box-shadow: 0 0 1vw 0 rgb(161, 159, 159),
+                  0 0 1vw0 rgb(217, 192, 197),
+                  0 0 1vw 0 rgb(230, 202, 208) inset;
       position: absolute;
-      top: 210px;
-      right: 140px;          
+      top: 25vh;
+      right: 8vw;         
     }
+    .button3{
+      background-color: #000009;
+      border: 0.3vw solid rgb(230, 216, 219);
+      border-radius: 2vw;
+      color: #fff;
+      padding: 1vw;
+      cursor: pointer;
+      font-size: 1vw;
+      box-shadow: 0 0 1vw 0 rgb(161, 159, 159),
+                  0 0 1vw0 rgb(217, 192, 197),
+                  0 0 1vw 0 rgb(230, 202, 208) inset;
+      position: absolute;
+      top: 70%;
+      left:42%
+    }
+
+    .popup{
+      width:30vw;
+      height: 30vh;
+      background-color: #ffffff;
+      border-radius: 6px;
+      position: absolute;
+      top:0;
+      left: 50%;
+      transform: translate(-50%,-50%)scale(0.1);/* 讓他有動畫的感覺 */
+      text-align: center;
+      padding: 0 2vw 2vw;
+      color: #333;
+      opacity: 1.5;
+      visibility: hidden; /* 這裡原本預設為會是隱藏當點擊提交才會跳出來 */
+      transition: transform 0.4s, top 0.4s;
+    }
+    .open-popup{
+      visibility: visible;
+      top:50%;
+      transform: translate(-50%,-50%) scale(1);
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     form {
-width: 70%;
-margin: auto;
-position: absolute;
-top: 40%; left: 0; bottom: 0; right: 0;
-}
+    width: 70%;
+    margin: auto;
+    position: absolute;
+    top: 40%; left: 0; bottom: 0; right: 0;
+    }
       
       label {
           display: block;
-          margin-top: 10px;
+          margin-top: 1vw;
       }
       
       input[type="submit"] {
-          margin-top: 10px;
-          padding: 5px 20px;
+        margin-top: 1vw;
+        padding: 0.5vw 2vw;
           background-color: #4CAF50;
           color: white;
           border: none;
-          border-radius: 4px;
+          border-radius: 0.4vw;
           cursor: pointer;
       }
       
@@ -114,11 +163,12 @@ top: 40%; left: 0; bottom: 0; right: 0;
       
       textarea {
           width: 80%;
-          height: 150px;
-          padding: 12px 20px;
+          height: 15vh;
+          padding: 1.2vw 2vw;
+
           box-sizing: border-box;
-          border: 2px solid #ccc;
-          border-radius: 4px;
+          border: 0.2vw solid #ccc;
+          border-radius: 0.4vw;
           background-color: #f8f8f8;
           resize: none;
       }
