--- a/團隊介紹.css
+++ b/團隊介紹.css
@@ -104,7 +104,7 @@ img{
       background-color: #ffffff;
       border-radius: 6px;
       position: absolute;
-      top:0;
+      top:50%;
       left: 50%;
       transform: translate(-50%,-50%)scale(0.1);/* 讓他有彈出動畫的感覺 */
       text-align: center;
@@ -113,7 +113,7 @@ img{
       opacity: 1.5;
       visibility: hidden; 
       /* 這裡原本預設為會是隱藏當點擊提交才會跳出來 */
-      transition: transform 0.4s, top 0.4;
+      
     }
     .open-popup{
       visibility: visible;
