--- a/story.css
+++ b/story.css
@@ -51,11 +51,11 @@ body {
     button{
       background-color: #000;
       border: .5px solid rgb(230, 216, 219);
-      border-radius: 2em;
+      border-radius: 20px;
       color: #fff;
-      padding:  1em;
+      padding: vw;
       cursor: pointer;
-      font-size: 1.5em;
+      font-size: 3vw;
       box-shadow: 0 0 10px 0 rgb(161, 159, 159),
                   0 0 10px 0 rgb(217, 192, 197),
                   0 0 10px 0 rgb(230, 202, 208) inset;
